@@ -202,3 +202,8 @@
 	* Added a 'cart_conductor' field to the 'rd_cart' struct.
 	* Added 'cart_composer' and 'use_cart_composer' fields to the
 	'rd_cart_values' struct.
+2017-02-16 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed bugs in 'rivendell/rd_listcarts.c' and
+	'rivendell/rd_listcart.c' that caused the 'cart_forced_length',
+	'cart_average_length', 'cart_length_deviation' and
+	'cart_average_segue_length' fields to always be returned as '0'.
